abc:440: fixed collapse filter code

--- a/src/app/data-portal-details/data-portal-details.component.css
+++ b/src/app/data-portal-details/data-portal-details.component.css
@@ -243,3 +243,7 @@ table {
     }
 }
 
+
+.pointer-cursor {
+    cursor: pointer;
+}
